--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@
 name: Deploy new versions
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - 'v*'  # Trigger on version tags (e.g., v1.0.0)
