--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Check available ports
         run: |
           # Check available ports and kill existing PM2 processes on those ports
-          AVAILABLE_PORTS=$(/home/frontend-mamanpaz/bin/check-active-container)
+          AVAILABLE_PORTS=$(~/bin/check-active-container)
           # Split the available ports and check for any PM2 processes using them
           for port in $(echo "$AVAILABLE_PORTS" | tr "," "\n"); do
             if pm2 list | grep -q "$port"; then
@@ -83,4 +83,4 @@ jobs:
           cd ${{ env.TAG_NAME }}
           npm ci
           # Start the app using the second script
-          mamanpaz-front-start
+          /home/frontend-mamanpaz/bin/mamanpaz-front-start
