--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "winston": "^3.15.0"
+    "winston": "^3.15.0",
+    "winston-loki": "^6.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
