--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+APP_NAME=mamanpaz-frontend
+
 # .env.development
 NODE_ENV=development
 LOG_LEVEL=debug
@@ -9,3 +11,9 @@ LOG_LEVEL=info
 LOKI_HOST=http://localhost:3100
 LOKI_AUTH=username:password
 PORT=3001
+
+# OpenTelemetry configuration
+OTEL_SERVICE_NAME=mamanpaz-front
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+OTEL_EXPORTER_OTLP_TRACES_PROTOCOL=http/protobuf
