--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@opentelemetry/exporter-logs-otlp-http": "^0.53.0",
+    "@vercel/otel": "^1.10.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18",
-    "winston": "^3.15.0",
-    "winston-loki": "^6.1.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
