set up global styles
updated globals.css

updated tailwind.config.css

initialized shadcn and updated color with brand colors

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -76,6 +76,7 @@ jobs:
               echo "No active process on port $port"
             fi
           done
+          pm2 save
 
       - name: Checkout the code
         uses: actions/checkout@v4
