--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@opentelemetry/resources": "^1.26.0",
     "@opentelemetry/sdk-logs": "^0.53.0",
     "@opentelemetry/semantic-conventions": "^1.27.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
