--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@opentelemetry/semantic-conventions": "^1.28.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@vercel/otel": "^1.10.0",
@@ -30,7 +31,9 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
