Add Guest Context Provider for state management
fetch guest state from backend

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,7 @@ OTEL_SERVICE_NAME=mamanpaz-front
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
 OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
 OTEL_EXPORTER_OTLP_TRACES_PROTOCOL=http/protobuf
+
+# Medusajs configuration
+MEDUSA_PUBLIC_KEY=pk_test_1234567890
+MEDUSA_BACKEND_URI=http://localhost:9000
