--- a/package.json
+++ b/package.json
@@ -26,18 +26,23 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.1",
+    "google-libphonenumber": "^3.2.40",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.4.3",
     "usehooks-ts": "^3.1.0",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
