--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.1",
     "google-libphonenumber": "^3.2.40",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "react": "19.0.0",
